resumes and pics team

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -34,7 +34,7 @@
               <a href="https://www.facebook.com/cristina.m.nedelcu" class="socialbtn facebook"><i class="fa fa-facebook"></i>Facebook</a>
               <a href="https://twitter.com/CrinaNedelcu" class="socialbtn twitter"><i class="fa fa-twitter"></i>Twitter</a>
               <a href="https://plus.google.com/117296806289261092600/about/p/pub?hl=ro" class="socialbtn google"><i class="fa fa-google-plus"></i>Google Plus</a>
-              <!-- <a href="#" class="socialbtn linkedin"><i class="fa fa-linkedin"></i>Linkedin</a> -->
+              <a href="https://www.linkedin.com/in/crinanedelcu" class="socialbtn linkedin"><i class="fa fa-linkedin"></i>Linkedin</a>
             
               
               <a href="https://www.youtube.com/channel/UCHv3JnlHMO9CKdtu1-kiuXg?view_as=public" class="socialbtn youtube"><i class="fa fa-youtube"></i>Youtube</a>
