--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <%= render "/refinery/html_tag" %>
   <% site_bar = render('/refinery/site_bar', :head => true) -%>
   <head>
+    <meta name="google-site-verification" content="8lBpv-yxpXzcSuiUUH0Jm-nd8hMexql6vPoE7rnkggQ" />
     <%= render "/refinery/head" %>
   </head>
   <body id="<%= canonical_id @page %>">
